# My-Stuff

./: .gitignore  CMakeLists.txt  README.md  airport.py  build.sh  dayCalc.cpp  defect.json  defect.txt  fib_calc.cpp  final_grade_calc.cpp  medieval-notes-3.14.md  medieval-notes-4.11.md  medieval-notes-4.18.md  numberConversion.cpp  parse.cpp  requirements.md  script_startup.js  semanticAnalysis  vigenere.cpp  vigienere.cpp
1CURRENT/: compAlgSort.cpp  compAlgSort.py  dayCalc.cpp  finalGrade.cpp  finalGrade.py  fourFunction.cpp  fourFunction.py  gridpointOperations.cpp  gridpointOperations.py  investTable.cpp  investTable.py  it  measurement_conversion.cpp  sample.cpp  tempConv.py
1LAB/: elevator.md  elevator.py  money_conv.cpp
1PROCESSED/: compAlgSort.cpp  create_test-v2.6.cpp  finalGrade.cpp  fourFunction.cpp  investTable.cpp  isRightTriangle.cpp  moneyCalculator.cpp  sizeOfFile.cpp  tempConv  tempConv.cpp
1TEST/: coinTotal.cpp  create_test-v2.7.cpp  create_test-v2.7.py  factorialGeoseriesCalc.cpp  factorialGeoseriesCalc.py  gridpointOperations.cpp  isMultiple.cpp  isRightTriangle.py  moneyCalculator.py  numberOfFileContents.py  tempConv.cpp  tempConv.py
C++/: tictactoe.cpp
Calculators/: README.md  coinTotal.py  compile-py.sh  compile.sh  factorialGeoseriesCalc.cpp  factorialGeoseriesCalc.py  finalGrade.cpp  finalGrade.py  investTable.cpp  isMultiple.cpp  max-master-test.sh  moneyCalculator.cpp  moneyCalculator.py
Cryptography/: cipher.py  vigenere.cpp
Games/: README.md  tictactoe.cpp  tictactoe.rs
Python/: 1hash.py  1imgtest.py  README.md  isMultiple.py  (+3 more)
(+523 files in other folders)
